--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>Home</title>
 </head>
 <body>
-    <h1>Hello world!</h1>
+    <header>
+        Đây là header
+    </header>
+    <main>Đây là main</main>
+    <footer>
+        Đây là footer
+    </footer>
 </body>
 </html>
