--- a/index.html
+++ b/index.html
@@ -6,12 +6,6 @@
     <title>Home</title>
 </head>
 <body>
-    <header>
-        Đây là header
-    </header>
-    <main>Đây là main</main>
-    <footer>
-        Đây là footer
-    </footer>
+    <h1>Hello world!</h1>
 </body>
 </html>
