--- a/login.html
+++ b/login.html
@@ -9,6 +9,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+  <script src="/ProjectHocHo/assets/js/validator.js"></script>
 </head>
 
 <body>
@@ -25,13 +26,13 @@
           <!-- Email input -->
           <div class="form-outline mb-4">
             <input type="text" id="form2Example1" class="form-control" placeholder="Số điện thoại" />
-
+            <span class="message_error"></span>
           </div>
 
           <!-- Password input -->
           <div class="form-outline mb-4">
             <input type="password" id="form2Example2" class="form-control" placeholder="Mật khẩu" />
-
+            <span class="message_error"></span>
           </div>
 
           <!-- 2 column grid layout for inline styling -->
@@ -46,7 +47,7 @@
             </div>
 
             <!-- Submit button -->
-            <button type="button" class="btn btn-primary btn-block mb-4">Sign in</button>
+            <button id="login-btn" type="button" class="btn btn-primary btn-block mb-4">Sign in</button>
 
             <!-- Register buttons -->
             <div class="text-center">
@@ -75,7 +76,19 @@
     </div>
   </div>
   <!-- login -->
+  <script>
+        const messageUsername = "Username must be form 6 to 100 character",
+                    messagePassword = "Password must greater 8 character";
+            const username = document.getElementById('form2Example1'),
+                    password = document.getElementById('form2Example2');
+            const inputsToValidateLogin = [
+                {element: username, type: 'text', message: messageUsername, regex: /^[a-zA-Z0-9.,!#$%&'*+/=?^_]{6,100}$/},
+                {element: password, type: 'text',message: messagePassword, regex: /^[a-zA-Z0-9.,!#$%&'*+/=?^_]{8,}$/}
+            ];
+            validation(inputsToValidateLogin, document.querySelector("#login-btn"));
 
-</body>
+
+  </script>
+           </body>
 
 </html>
