--- a/index.html
+++ b/index.html
@@ -4,63 +4,131 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <link rel="stylesheet" href="./assets/css/form.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="./assets/css/slick.css">
+    <link rel="stylesheet" href="./assets/css/slick-theme.css">
+    <link rel="stylesheet" href="./assets/css/base.css">
+    <link rel="stylesheet" href="./assets/css/home.css">
 </head>
 <body>
-    
-    <form id="form-login" action="/auth/login" method="post">
-        <!-- Email input -->
-        <div class="form-outline form-group mb-4">
-            <label for="loginName">Username</label>
-            <input type="text" id="loginName" name="loginName" class="form-control" />
-            <span class="message_error"></span>
-        </div>
-        <!-- Password input -->
-        <div class="form-outline form-group mb-4">
-            <label for="loginPassword">Password</label>
-            <input type="password" id="loginPassword" name="loginPassword" class="form-control" />
-            <span class="message_error"></span>
-        </div>
-        <!-- 2 column grid layout -->
-        <div class="row mb-4 box-config-account">
-            <div class="col-6 d-flex justify-content-center">
-                <!-- Checkbox -->
-                <div class="form-check mb-3 mb-md-0">
-                    <input name="remember" class="form-check-input" type="checkbox" value="" id="loginCheck"
-                           checked />
-                    <label class="form-check-label" for="loginCheck"> Remember me </label>
+    <header>
+        Thắng
+    </header>
+    <main>
+        <div class="container">
+            <div class="main-header-nav-direction">
+                <ul class="nav-direction-list">
+                    <li class="nav-direction-item">
+                        <a href="" class="nav-direction-item-link">
+                            Trang chủ
+                        </a>
+                    </li>
+                    <li class="nav-direction-item">
+                        <i class='bx bxs-chevron-right'></i>
+                    </li>
+                    <li class="nav-direction-item">
+                        <a href="" class="nav-direction-item-link">
+                            Trang chủ
+                        </a>
+                    </li>
+                    <li class="nav-direction-item">
+                        <i class='bx bxs-chevron-right'></i>
+                    </li>
+                    <li class="nav-direction-item">
+                        <a href="" class="nav-direction-item-link">
+                            Trang chủ
+                        </a>
+                    </li>
+                    <li class="nav-direction-item">
+                        <i class='bx bxs-chevron-right'></i>
+                    </li>
+                </ul>
+            </div>
+            <div class="main-header-wrapper-tag">
+                <div class="main-header-tags">
+                    <div class="main-header-tag">
+                        <a href="" class="main-header-tag-link">
+                            <span class="main-header-tag-content">
+                                Học hộ cần thơ Học hộ cần thơ Học hộ cần thơ
+                            Học hộ cần thơ Học hộ cần thơ Học hộ cần thơ
+                            </span>
+                        </a>
+                    </div>
+                    <div class="main-header-tag">
+                        <a href="" class="main-header-tag-link">
+                            <span class="main-header-tag-content">
+                                Học hộ cần thơ 
+                            </span>
+                        </a>
+                    </div>
+                    <div class="main-header-tag">
+                        <a href="" class="main-header-tag-link">
+                            Học hộ Đà Năng
+                        </a>
+                    </div>
+                    <div class="main-header-tag">
+                        <a href="" class="main-header-tag-link">
+                            Học hộ cần thơ
+                        </a>
+                    </div>
+                    <div class="main-header-tag">
+                        <a href="" class="main-header-tag-link">
+                            Học hộ Sài gòn
+                        </a>
+                    </div>
+                    <div class="main-header-tag">
+                        <a href="" class="main-header-tag-link">
+                            Học hộ Đà Năng
+                        </a>
+                    </div>
                 </div>
             </div>
-            <div class="col-6 d-flex justify-content-center">
-                <!-- Simple link -->
-                <a href="/forget-password">Forgot password?</a>
-            </div>
         </div>
-        <!-- Submit button -->
-        <button id="login-btn" type="submit" name="submitLogin"  class="btn btn-primary btn-submit-form">Sign in</button>
-        <!-- Register buttons -->
-    </form>
-    <script src="./assets/js/validator.js"></script>
-    <script>
-        const messageUsername = "Username must be form 6 to 100 character",
-                    messagePassword = "Password must greater 8 character";
-            const username = document.getElementById('loginName'),
-                    password = document.getElementById('loginPassword');
-        const inputsToValidateLogin = [
-        {
-            element: username, 
-            message: messageUsername, 
-            regex: /^[a-zA-Z0-9.,!#$%&'*+/=?^_]{6,100}$/,
-            type: "text"
-        } ,
-        {
-            element: password, 
-            message: messagePassword, 
-            regex: /^[a-zA-Z0-9.,!#$%&'*+/=?^_]{8,}$/,
-            type: "text"
-        }
-    ];
-    validation(inputsToValidateLogin, document.querySelector("#login-btn"));
-    </script>
+    </main>
+    <footer>
+
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
+    <script src="./assets/js/slick.js"></script>
+        <script>
+                                            $(document).ready(function () {
+                                                $(".main-header-tags").slick({
+                                                    dots: false,
+                                                    infinite: false,
+                                                    speed: 400,
+                                                    slidesToShow: 5,
+                                                    slidesToScroll: 5,
+                                                    autoplay: false,
+                                                    responsive: [
+                                                        {
+                                                            breakpoint: 1024,
+                                                            settings: {
+                                                                slidesToShow: 3,
+                                                                slidesToScroll: 3,
+                                                                infinite: true,
+                                                                dots: false,
+                                                            },
+                                                        },
+                                                        {
+                                                            breakpoint: 600,
+                                                            settings: {
+                                                                slidesToShow: 2,
+                                                                slidesToScroll: 2,
+                                                            },
+                                                        },
+                                                        {
+                                                            breakpoint: 480,
+                                                            settings: {
+                                                                slidesToShow: 2,
+                                                                slidesToScroll: 2,
+                                                            },
+                                                        },
+                                                    ],
+                                                });
+                                            });
+        </script>
 </body>
 </html>
