--- a/user/login.html
+++ b/user/login.html
@@ -5,13 +5,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login</title>
-  <link rel="stylesheet" href="../assets/css/login.css">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-  <script src="/ProjectHocHo/assets/js/validator.js"></script>
+  <link rel="stylesheet" href="../assets/css/form.css">
+  <link rel="stylesheet" href="../assets/css/login.css">
 </head>
-
 <body>
   <!-- login -->
   <div class="main-body">
@@ -19,36 +17,31 @@
       <div class="container-nav-width">
         <div class="heading-login-img">
           <img src="../assets/images/logo.png" alt="">
-
         </div>
         <h3>Đăng nhập</h3>
         <form>
           <!-- Email input -->
-          <div class="form-outline mb-4">
-            <input type="text" id="form2Example1" class="form-control" placeholder="Số điện thoại" />
+          <div class="form-group mb-4">
+            <input type="text" id="username" class="form-control" placeholder="Số điện thoại" />
             <span class="message_error"></span>
           </div>
-
           <!-- Password input -->
-          <div class="form-outline mb-4">
-            <input type="password" id="form2Example2" class="form-control" placeholder="Mật khẩu" />
+          <div class="form-group mb-4 box-password">
+            <input type="password" id="password" class="form-control" placeholder="Mật khẩu" />
+            <i class='bx bx-sleepy hidden-password' onclick="toggleStatusPassword(this)"></i>
             <span class="message_error"></span>
           </div>
-
           <!-- 2 column grid layout for inline styling -->
           <div class="row mb-4">
             <div class="col d-flex justify-content-center">
               <!-- Checkbox -->
-
               <div class="col">
                 <!-- Simple link -->
                 <a href="#!">Forgot password?</a>
               </div>
             </div>
-
             <!-- Submit button -->
             <button id="login-btn" type="button" class="btn btn-primary btn-block mb-4">Sign in</button>
-
             <!-- Register buttons -->
             <div class="text-center">
               <div class="main-text">
@@ -61,7 +54,6 @@
                   <i class='bx bxl-facebook-circle'></i>
                   <span>Facebook</span>
                 </button>
-
                 <button type="button" class="btn btn-link btn-floating mx-1">
                   <svg version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48" class="LgbsSe-Bz112c"><g><path fill="#EA4335" d="M24 9.5c3.54 0 6.71 1.22 9.21 3.6l6.85-6.85C35.9 2.38 30.47 0 24 0 14.62 0 6.51 5.38 2.56 13.22l7.98 6.19C12.43 13.72 17.74 9.5 24 9.5z"></path><path fill="#4285F4" d="M46.98 24.55c0-1.57-.15-3.09-.38-4.55H24v9.02h12.94c-.58 2.96-2.26 5.48-4.78 7.18l7.73 6c4.51-4.18 7.09-10.36 7.09-17.65z"></path><path fill="#FBBC05" d="M10.53 28.59c-.48-1.45-.76-2.99-.76-4.59s.27-3.14.76-4.59l-7.98-6.19C.92 16.46 0 20.12 0 24c0 3.88.92 7.54 2.56 10.78l7.97-6.19z"></path><path fill="#34A853" d="M24 48c6.48 0 11.93-2.13 15.89-5.81l-7.73-6c-2.15 1.45-4.92 2.3-8.16 2.3-6.26 0-11.57-4.22-13.47-9.91l-7.98 6.19C6.51 42.62 14.62 48 24 48z"></path><path fill="none" d="M0 0h48v48H0z"></path></g></svg> 
                   <span>Google</span>
@@ -70,25 +62,40 @@
 
             </div>
         </form>
-
       </div>
-
     </div>
   </div>
   <!-- login -->
+  <script src="../assets/js/validator.js"></script>
   <script>
         const messageUsername = "Username must be form 6 to 100 character",
                     messagePassword = "Password must greater 8 character";
-            const username = document.getElementById('form2Example1'),
-                    password = document.getElementById('form2Example2');
+            const username = document.getElementById('username'),
+                    password = document.getElementById('password');
             const inputsToValidateLogin = [
-                {element: username, type: 'text', message: messageUsername, regex: /^[a-zA-Z0-9.,!#$%&'*+/=?^_]{6,100}$/},
-                {element: password, type: 'text',message: messagePassword, regex: /^[a-zA-Z0-9.,!#$%&'*+/=?^_]{8,}$/}
+                {
+                  element: username,
+                  type: 'text',
+                  message: messageUsername,
+                  regex: /^[a-zA-Z0-9.,!#$%&'*+/=?^_]{6,100}$/
+                },
+                {
+                  element: password, 
+                  type: 'text',
+                  message: messagePassword, 
+                  regex: /^[a-zA-Z0-9.,!#$%&'*+/=?^_]{8,}$/
+                }
             ];
             validation(inputsToValidateLogin, document.querySelector("#login-btn"));
-
-
+            const toggleStatusPassword = (ele)=> {
+              if(ele.classList.contains("hidden-password")) {
+                ele.setAttribute("class", "bx bx-shocked");
+                ele.parentElement.querySelector("input[type=password]").type = "text";
+              } else {
+                ele.parentElement.querySelector("input[type=text]").type = "password";
+                ele.setAttribute("class", "bx bx-sleepy hidden-password",);
+              }
+            }
   </script>
-           </body>
-
+  </body>
 </html>
