--- a/user/login.html
+++ b/user/login.html
@@ -1,3 +1,4 @@
+<html itemscope itemtype="http://schema.org/Article"></html>
 <!DOCTYPE html>
 <html lang="en">
 
@@ -5,11 +6,23 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login</title>
+  
   <link rel="stylesheet" href="../assets/css/login.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
   <script src="/ProjectHocHo/assets/js/validator.js"></script>
+  <script>
+    function start() {
+      gapi.load('auth2', function() {
+        auth2 = gapi.auth2.init({
+          client_id: '20311001743-42a2raf50afkrglq1khm1j3ekork2692.apps.googleusercontent.com',
+          // Scopes to request in addition to 'profile' and 'email'
+          //scope: 'additional_scope'
+        });
+      });
+    }
+  </script>
 </head>
 
 <body>
@@ -62,7 +75,7 @@
                   <span>Facebook</span>
                 </button>
 
-                <button type="button" class="btn btn-link btn-floating mx-1">
+                <button type="button" id="signinButton" class="btn btn-link btn-floating mx-1">
                   <svg version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48" class="LgbsSe-Bz112c"><g><path fill="#EA4335" d="M24 9.5c3.54 0 6.71 1.22 9.21 3.6l6.85-6.85C35.9 2.38 30.47 0 24 0 14.62 0 6.51 5.38 2.56 13.22l7.98 6.19C12.43 13.72 17.74 9.5 24 9.5z"></path><path fill="#4285F4" d="M46.98 24.55c0-1.57-.15-3.09-.38-4.55H24v9.02h12.94c-.58 2.96-2.26 5.48-4.78 7.18l7.73 6c4.51-4.18 7.09-10.36 7.09-17.65z"></path><path fill="#FBBC05" d="M10.53 28.59c-.48-1.45-.76-2.99-.76-4.59s.27-3.14.76-4.59l-7.98-6.19C.92 16.46 0 20.12 0 24c0 3.88.92 7.54 2.56 10.78l7.97-6.19z"></path><path fill="#34A853" d="M24 48c6.48 0 11.93-2.13 15.89-5.81l-7.73-6c-2.15 1.45-4.92 2.3-8.16 2.3-6.26 0-11.57-4.22-13.47-9.91l-7.98 6.19C6.51 42.62 14.62 48 24 48z"></path><path fill="none" d="M0 0h48v48H0z"></path></g></svg> 
                   <span>Google</span>
                 </button>
@@ -88,6 +101,49 @@
             validation(inputsToValidateLogin, document.querySelector("#login-btn"));
 
 
+  </script>
+   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js">
+  </script>
+  <script src="https://apis.google.com/js/client:platform.js?onload=start" async defer>
+  </script>
+  <script>
+    $('#signinButton').click(function() {
+      auth2.grantOfflineAccess({
+      'redirect_uri': 'postmessage',
+      'client_id': '20311001743-42a2raf50afkrglq1khm1j3ekork2692.apps.googleusercontent.com',
+      'client_secret': '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'
+    }).then(signInCallback);
+    });
+  </script>
+  <!-- Last part of BODY element in file index.html -->
+<script>
+  function signInCallback(authResult) {
+    console.log(authResult)
+    if (authResult['code']) {
+    
+      // Hide the sign-in button now that the user is authorized, for example:
+      $('#signinButton').attr('style', 'display: none');
+  
+      // Send the code to the server
+      $.ajax({
+        type: 'POST',
+        url: 'http://example.com/storeauthcode',
+        // Always include an `X-Requested-With` header in every AJAX request,
+        // to protect against CSRF attacks.
+        headers: {
+          'X-Requested-With': 'XMLHttpRequest'
+        },
+        contentType: 'application/octet-stream; charset=utf-8',
+        success: function(result) {
+          // Handle or verify the server response.
+        },
+        processData: false,
+        data: authResult['code']
+      });
+    } else {
+      // There was an error.
+    }
+  }
   </script>
            </body>
 
