--- a/user/detail.html
+++ b/user/detail.html
@@ -8,25 +8,137 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="../assets/css/detailStyle.css">
+    <link rel="stylesheet" href="../Resources/slick/slick.css">
+    <link rel="stylesheet" href="../assets/css/base.css">
+    <link rel="stylesheet" href="../Resources/slick/slick-theme.css">
+    <link rel="stylesheet" href="../assets/css/header.css">
     <title>Document</title>
 </head>
-<header>
-
-</header>
 
 <body>
+    <!-- phan header -->
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light bg-white">
 
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Học Hộ</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Part time</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Trọ Sinh Viên</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Việc làm</a>
+                    </li>
+                </ul>
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item ">
+                        <a class="nav-link " href="#">Đóng góp ý kiến</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Tải ứng dụng</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Trợ giúp</a>
+                    </li>
+                    <li class="nav-item-header ">
+                        <a href="#">
+                            <span class="logo-header">
+                                <img src="../assets/images/pty-logo-appwrapper.png" alt="Suitcase Icon">
+                            </span>
+                            <span>Dành cho đa cấp</span>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+
+
+        <nav class="navbar navbar-expand-lg navbar-dark bg-white">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">
+                    <img src="../assets/images/pty-logo-appwrapper.png" alt=""></a>
+
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNavDarkDropdown" aria-controls="navbarNavDarkDropdown" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
+                    <ul class="navbar-nav">
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button"
+                                data-bs-toggle="dropdown" aria-expanded="false">
+                                <i class='bx bx-menu' style='font-size: 20px; vertical-align: text-bottom;'></i> Danh
+                                mục
+                            </a>
+                            <ul class="dropdown-menu dropdown-menu-white" aria-labelledby="navbarDarkDropdownMenuLink">
+                                <li><a class="dropdown-item" href="#">Học Hộc</a></li>
+                                <li><a class="dropdown-item" href="#">Việc làm partime</a></li>
+                                <li><a class="dropdown-item" href="#">Gia sư online</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                    <form class="form-inline my-2 my-lg-0">
+                        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                        <button class="btn btn-outline-success my-2 my-sm-0" type="submit"><i
+                                class='bx bx-search'></i></button>
+                    </form>
+                </div>
+                <ul class="navbar-nav ml-auto custom-nav-list ">
+                    <li class="nav-item custom-nav-item">
+                        <a class="nav-link " href="#"><i class='bx bx-bell'
+                                style='font-size: 25px; vertical-align: text-bottom; '></i></a>
+                    </li>
+                    <li class="nav-item custom-nav-item-second">
+                        <a class="nav-link" href="#"><i class='bx bx-comment-detail'
+                                style='font-size: 25px; vertical-align: text-bottom;'></i></a>
+                    </li>
+                    <li class="nav-item custom-nav-item-third">
+                        <a class="nav-link" href="#" style="font-size: 14px;"><i class='bx bx-notepad'
+                                style='font-size: 25px; vertical-align: text-bottom;'></i>Quản lí tin</a>
+                    </li>
+                    <li class="nav-item custom-nav-item-five">
+                        <a class="nav-link" href="#" style="font-size: 14px;"><i class='bx bx-user-circle'
+                                style='font-size: 25px; vertical-align: text-bottom;'></i>Tài khoản</a>
+                    </li>
+                    <li class="nav-item custom-nav-item-four">
+                        <a class="nav-link" href="#" style="font-size: 14px; background-color:#FF8800; ">
+                            <i class='bx bx-edit'
+                                style='font-size: 25px; vertical-align:text-bottom; text-align:center;'></i>Đăng tin</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </header>
     <main>
         <h1></h1>
+        <!-- noi dung chi tiet cua bai dang -->
         <div class="container">
             <div class="row">
+                <!-- phan hien thi noi dung -->
                 <div class="col-8 main-detail">
                     <label>Chi tiet</label>
+                    <!-- noi dung bai dang  -->
                     <div class="Detail">
+                        <p>
+                            Can tim nguoi hoc ho tai dai hoc
+                        </p>
+                        <span>Ngay dang</span>
                     </div>
                 </div>
+                <!-- hien thong tin lien he -->
                 <div class="col-4 main-infor">
                     <label>Thong tin le he</label>
+                    <!-- thong tin nguoi dang  -->
                     <div class="Infor-User">
                         <div>
                             <i class='bx bx-user'></i> <span>Bao Loc</span>
@@ -35,16 +147,68 @@
                             <i class='bx bx-phone'></i> <span>Lien he:</span>
                         </div>
                     </div>
+                    <!-- khung chat  -->
                     <div class="Contact-User">
-                        <i class='bx bx-message-dots'></i>Tro chuyen truc tiep
+                        <i class='bx bx-message-dots'></i>
+                        <span>Tro chuyen truc tiep</span>
                     </div>
                 </div>
-
-
+            </div>
+        </div>
+        <!-- bai dang lien quan -->
+        <div class="container">
+            <h3 class="title-other-post">Bai dang lien quan</h3>
+            <div class="multiple-items" style="background-color: bisque;">
+                <!-- cac bai dang khac -->
+                <div class="orther-content-main">
+                    <!-- hien thi cac bai dang khac  -->
+                    <div>
+                        <a href="">Can nguoi hoc ho dai hoc hutech</a>
+                    </div>
+                    <div>
+                        <span>Ngay dang: 11/12/2023</span>
+                    </div>
+                </div>
+                <div class="orther-content-main">
+                    <div>
+                        <a href="">Can nguoi hoc ho dai hoc hutech</a>
+                    </div>
+                    <div>
+                        <span>Ngay dang: 11/12/2023</span>
+                    </div>
+                </div>
+                <div class="orther-content-main">
+                    <div>
+                        <a href="">Can nguoi hoc ho dai hoc hutech</a>
+                    </div>
+                    <div>
+                        <span>Ngay dang: 11/12/2023</span>
+                    </div>
+                </div>
+                <div class="orther-content-main">
+                    <div>
+                        <a href="">Can nguoi hoc ho dai hoc hutech</a>
+                    </div>
+                    <div>
+                        <span>Ngay dang: 11/12/2023</span>
+                    </div>
+                </div>
             </div>
         </div>
     </main>
+    <!-- phan footer -->
+    <footer>
 
+    </footer>
+    <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script type="text/javascript" src="../Resources/slick/slick.min.js"></script>
+    <script>$('.multiple-items').slick({
+            infinite: true,
+            slidesToShow: 5,
+            slidesToScroll: 2
+        });</script>
 </body>
+
 
 </html>
