--- a/user/detail.html
+++ b/user/detail.html
@@ -159,6 +159,7 @@
         <div class="container">
             <h3 class="title-other-post">Bai dang lien quan</h3>
             <div class="multiple-items" style="background-color: bisque;">
+
                 <!-- cac bai dang khac -->
                 <div class="orther-content-main">
                     <!-- hien thi cac bai dang khac  -->
@@ -192,8 +193,11 @@
                     <div>
                         <span>Ngay dang: 11/12/2023</span>
                     </div>
-                </div>
+                </div>   
             </div>
+            <div class="see-all">
+                <a href="#">Xem them</a>
+             </div>
         </div>
     </main>
     <!-- phan footer -->
